# cluttersmith

./: .gitignore  LICENSE  Makefile  Makefile.am  README  actor-editing.c  autogen.sh  clutterbug.c  clutterbug.css  clutterbug.h  cluttersmith.c  cluttersmith.css  cluttersmith.h  cluttersmith.json  configure.ac  dumper.c  hrn-popup.c  hrn-popup.h  hyperlink.c  init-types.c  main.c  parasite.json  previews.c  property-editors.c  scene-graph.c  selection.c  stencils.c  util.c  util.h  verbs.c
autotools/: .gitignore  Makefile.am  shave-nolt.m4
data/: Makefile.am  cluttersmith-assistant.json  cluttersmith.css  cluttersmith.desktop  cluttersmith.json  cs-animator.json  cs-overlay.json  cs-sidebar-assistant.json  cs-sidebar.json  cs-toolbar.json
data/annotation-templates/: Makefile.am  callout.json  link.json
data/docs/: LD_PRELOAD.json  Makefile.am  help.json  index.js  index.json  javascript.js  javascript.json  main.js  roadmap.json  todo.json  video.js  video.json  video.prejs  widgets.json
data/stencils/: Makefile.am  hyperlink.json  slide.json  text.json  texture.json
data/style/: Makefile.am  cluttersmith.css
data/templates/: Makefile.am  button.json  combobox.json  entry.json  expander.json  link.json  progressbar.json  rectangle.json  scrollbar.json  slide.json  slider.json  text.json  texture.json  toggle.json  vertical-scrollbar.json
json/: about.json  foo.json  todo.json  widgets.json
src/: Makefile.am  actor-editing.c  animator-editor.c  animator-editor.h  cb-texture.c  cb-texture.h  clutter-states.c  clutter-states.h  cluttersmith-context.c  cluttersmith-context.h  cluttersmith.c  cluttersmith.h  cs-actor-editing.c  cs-anchor.c  cs-animation-editing.c  cs-animation-editing.h  cs-animator-editor.c  cs-animator-editor.h  cs-bind.c  cs-callbacks.c  cs-context.c  cs-context.h  cs-drag-drop.c  cs-edit-text.c  cs-event-dispatch.c  cs-export.c  cs-history.c  cs-history.h  cs-install.c  cs-move.c  cs-pan.c  cs-previews.c  cs-resize.c  cs-rotate.c  cs-selection.c  cs-serializer.c  cs-session-history.c  cs-stencils.c  cs-texture.c  cs-texture.h  (+20 more)
stencils/: button.json  rectangle.json  scrollbar.json  slide.json  text.json
