SUBDIRS = templates annotation-templates docs

applicationsdir = $(datadir)/applications
applications_DATA = cluttersmith.desktop

iconsdir = $(datadir)/icons/hicolor/64x64/apps
icons_DATA = cluttersmith.png

resdir = $(pkgdatadir)
res_DATA = \
  button-bg-hover.png \
  button-bg.png \
  button-checked-bg.png \
  entry-bg.png \
  link-bg.png \
  cluttersmith.css \
  cluttersmith.json \
  cluttersmith-assistant.json \
  cluttersmith.png \
  expander-active.png \
  expander-arrow-up.png \
  expander-arrow-up-hover.png \
  expander-arrow-down.png \
  expander-arrow-down-hover.png

EXTRA_DIST = $(icons_DATA) $(applications_DATA) $(res_DATA) 
